kubernetes.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hellocloud2
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: hellocloud2
    spec:
      containers:
      - name: hellocloud2
        image: gcr.io/hello-cloud-2/hello-cloud-2
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 1
          requests:
            cpu: 25m
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 8
          periodSeconds: 10
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: hellocloud2
  name: hellocloud2
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30601
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hellocloud2
  type: NodePort

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hellocloud2
spec:
    backend:
      serviceName: hellocloud2
      servicePort: 80

---

apiVersion: v1
kind: Namespace
metadata:
  name: development
